fix: setting popup height with content overflow

--- a/src/components/radio/radio.css
+++ b/src/components/radio/radio.css
@@ -1,5 +1,5 @@
 label.radio:hover input ~ span {
-  @apply bg-gray-400;
+  @apply bg-gray-300;
 }
 
 label.radio input:checked ~ span {
@@ -26,7 +26,7 @@ label.radio span:after {
 }
 
 .dark label.radio:hover input ~ span {
-  @apply bg-gray-600;
+  @apply bg-gray-500;
 }
 
 .dark label.radio span:after {
